todo list display template done

--- a/layout/home.html
+++ b/layout/home.html
@@ -56,6 +56,35 @@
         </div>
         <div class="pend">
             <h6 class="display-6">Pending Tasks </h6>
+                
+            <div class="task">
+                <div class="_left">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="status" checked>
+                    </div>
+                    <div class="data">
+                        <p class="lead">
+                            This is a title
+                        </p>
+                        <figcaption class="blockquote-footer">
+                            This is going to be a very long description of the task <cite title="Source Title">Source Title</cite>
+                        </figcaption>
+                    </div>
+                </div>
+                <div class="cont">
+                    <div class="tags">
+                        <p id="cat"class="lead">
+                            Sports
+                        </p>
+                        <p id="date" class="lead">
+                            2022-08-07
+                        </p>
+                    </div>
+                    <div class="edit">
+                        <i class="bi bi-pencil"></i>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="comp">
             <h6 class="display-6">Completed Tasks </h6>
