logout functionality added

--- a/layout/home.html
+++ b/layout/home.html
@@ -35,6 +35,9 @@
         <div class="icon" id="account" title="My Account">
             <i class="bi bi-person"></i>
         </div>
+        <div class="icon" id="logout" title="Logout">
+            <i class="bi bi-box-arrow-left"></i>
+        </div>
 
         
     </div>
@@ -82,6 +85,7 @@
         <div class="account">
             <h6 class="display-6">My Account </h6>
         </div>
+
 
         
     </div>
