--- a/layout/home.html
+++ b/layout/home.html
@@ -96,7 +96,8 @@
         
     </div>
 
-    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalCenteredScrollableTitle" aria-hidden="true">
+    <div class="modalcontainer">
+    <div class="modal fade" id="myModal" tabindex="-1" aria-hidden="true" style="background-color: transparent; height: 100vh">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
@@ -153,5 +154,6 @@
           </div>
         </div>
       </div>
+    </div>
 </body>
 </html>
